# MtgDiscordTradingBot

./: .env.example  .envrc  .gitignore  README.md  flake.nix  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: nix.yml  pull-request.yml  pytest.yml
mtg_discord_trading_bot/: main.py  moxfield_api.py  trade_manager.py  trader.py  users.json.example
mtg_discord_trading_bot/test/: test_decklist_parser.py  test_main_integration.py  test_main_unit.py  test_moxfield_api_integration.py  test_trade_manager_integration.py  test_trader_integration.py  test_trader_unit.py
src/: config.py  decklist_parser.py  main.py  moxfield_api.py  trade_manager.py  trader.py  users.json.example
src/models/: moxfield_types.py
src/moxfield/: fetch_collections.py
src/test/: test_decklist_parser.py  test_main.py  test_main_integration.py  test_main_unit.py  test_moxfield_api_integration.py  test_trade_manager_integration.py  test_trader_integration.py
